<resources>
    <string name="app_name">AacnClient</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Settings</string>
    <string name="title_activity_lost_list">LostList</string>
    <string name="title_activity_lost_detail">LostDetail</string>
    <string name="list">List</string>
    <string name="detail">Detail</string>
    <string name="login">Login</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="title_activity_map">Choose Location</string>
    <string name="no_position">No Position</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_post_alert">PostAlert</string>
    <string name="desc">Description</string>
    <string name="image">Images</string>
    <string name="position">Position(click to choose)</string>
    <string name="wait">Please wait.</string>
    <string name="empty_msg">Please enter message!</string>
    <string name="sendtip">Send success, %d have received</string>
    <string name="sendsuccess">Send success</string>
    <string name="sendfail">Send failed</string>
    <string name="sending">Sending</string>
</resources>
